--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Git Test</title>
 </head>
 <body>
 	<h1>Hello World!</h1>
 	<p>Hey zubair how are you</p>
+	<p>hi cooler</p>
 </body>
 </html>
